tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__IoDungeon-AAAAAAAAAAAAAAAAAAAGuw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1723,
  "prerequisites": [
    1535
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Go get the schematics for tier 5 rockets. Watch out for lava!\n\nThis will open the Moons from Saturn and Uranus.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Io Dungeon",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1535
  ],
  "rewards": [],
  "tasks": []
}
