tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__JourneytotheBott-AAAAAAAAAAAAAAAAAAAGxQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1733,
  "prerequisites": [
    1531
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Venus is hot, so hot it can melt lead. On top of that the atmosphere is so thick, 90x the Overworld, that it will crush you. Not to mention the Sulfuric Acid! You will need to construct a special suit to survive on Venus without dying instantly.\n\n[note]Some armors can now also survive this atmosphere. It will say so in their tooltip.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Journey to the Bottom of a Molten Ocean",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1531
  ],
  "rewards": [],
  "tasks": []
}
