tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__MarsDungeon-AAAAAAAAAAAAAAAAAAAFpg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1446,
  "prerequisites": [
    1429
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Mars dungeon works the same as last time, so go find it!\n\nIf you need the schematics for the astro miner or the cargo rocket, kill another Boss Monster and exchange the schematics.\nBefore you journey home make sure you fulfill the quest requirements in the EV tab.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Mars Dungeon",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1429
  ],
  "rewards": [],
  "tasks": []
}
