tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__MarsLander-AAAAAAAAAAAAAAAAAAAFmA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1432,
  "prerequisites": [
    1427
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Mars lander is required for a soft landing. Put the Moon lander on a Parachute and surround it with airbags - that will do the trick. You hope.\n\nHint: Sometimes you can't loot or break the lander. Try to retrieve the contents with a hopper underneath. To prevent this, make sure to wait until you come to a full and complete stop, like when at a stop sign. Everyone does that, right?",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Mars Lander",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1427
  ],
  "rewards": [],
  "tasks": []
}
