tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__Monomethylhydraz-AAAAAAAAAAAAAAAAAAAKfw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2687,
  "prerequisites": [
    2686
  ],
  "properties": {
    "auto_claim": false,
    "desc": "For Tier 5 and 6 rockets you'll need to make CN3H7O3 (Purple) Rocket Fuel. \n\nTo start, make some Monomethylhydrazine.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lMonomethylhydrazine",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2686
  ],
  "rewards": [],
  "tasks": []
}
