tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__MoonBuggySchemat-AAAAAAAAAAAAAAAAAAAFmw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1435,
  "prerequisites": [
    1433
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The moon buggy needs a schematic. Place it in the NASA workbench and unlock it on the last tab.\n\n[note]If you've made the chip in an older version, you can turn it back into a schematic in a PLE.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Moon Buggy Schematic",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1433
  ],
  "rewards": [],
  "tasks": []
}
